[project]
name = "onxp_py"
version = "0.1.0"
description = "Belajar python"
authors = [
    {name = "Muhammad Fikri Basa", email = "mfikribasa@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
